--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inner-ward",
+  "name": "products-web",
   "version": "1.0.0",
   "description": "",
   "main": "dist/src/functions/*.js",
@@ -20,8 +20,6 @@
     "@azure/identity": "^4.5.0",
     "@azure/keyvault-secrets": "^4.9.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
-    "date-fns": "^4.1.0",
-    "htm": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
     "mongodb": "^6.12.0"
   },
@@ -31,14 +29,12 @@
     "@shelf/jest-mongodb": "^4.3.2",
     "@types/isomorphic-fetch": "^0.0.39",
     "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.15",
     "@types/node": "^18.19.68",
     "azure-functions-core-tools": "^4.x",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^8.0.3",
-    "mongoose": "^8.10.0",
     "rimraf": "^5.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3",
